--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,62 @@
+html,
 body {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  height: 100vh;
+  margin: 0;
 }
+
+* {
+  box-sizing: border-box;
+  font-family: helvetica;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 h1 {
-    font-size: 10vmin;
-    margin: 0;
-
-}
-h3 {
-    font-size: 5vmin;
-    margin: 1vmin;
-    color: #434322;
+  margin-top: 0;
+  margin-bottom: 50px;
 }
 
-div {
-    border: var(--border);
-    cursor: pointer;
-    margin: 1vmin;
-    background-color: #fff;
+td {
+  height: 200px;
+  width: 200px;
+  text-align: center;
+}
+
+td div {
+  margin: 0 auto;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  pointer-events: none;
+  font-size: 3rem;
+}
+
+tr td:nth-child(2) {
+  border-left: 4px dashed grey;
+  border-right: 4px dashed grey;
+}
+
+tr:nth-child(2) td {
+  border-top: 4px dashed grey;
+  border-bottom: 4px dashed grey;
 }
 
 button {
-    margin-top: 2vmin;
-    width: 25vmin;
-    height: 10vmin;
-    font-size: 3vmin;
-    border-radius: 2vmin;
+  margin-top: 30px;
+  padding: 15px;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  font-size: 20px;
 }
 
-
-#board {
-
-    --border: 1vmin solid #000;
-
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(3, 25vmin);
-    grid-template-rows: repeat(3, 22vmin);
-    width: 80vmin;
-    height: 70vmin;
+button:hover {
+  background-color: white;
+  color: black;
 }
-
-
 
